examples/invalid/test08.alice

The room main () contained a number
opened
closed
